--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -5,7 +5,6 @@
 <head>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="snap.svg-min.js"></script>
-	<!--<script src=".min.js"></script>-->
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 	<title>DiPi Portal</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
@@ -85,6 +84,8 @@
 
 		<div id="popupDiv" class="parallaxSec shadow_top">
 
+			<!-- <div class="popupOverlay" id="topOverlay"></div> -->
+
 				<div id="col1" class="column">
 					<h2 class="details name" id="name">Name</h2>
 					<h6 class="details" id="years">1960-1980</h6>
@@ -109,14 +110,14 @@
 					<h4>Reference</h4>
 					
 				</div>
-				<div class="column " id="col4">
+				<div id="col4" class="column" >
 					<span class="name hovered" id="close"><img src="images/arrow.png"></span>
 					<span id="globe">
 						<img src="">
 					</span>
 				</div>	
 			
-
+			<!-- <div class="popupOverlay" id="bottomOverlay"></div> -->
 		</div>
 	
 	</div>
