--- a/Mockups/V3_Integrated/resources.html
+++ b/Mockups/V3_Integrated/resources.html
@@ -49,8 +49,9 @@
 					<li>
 						<div class="downloadable active">
 							<img src="images/resources_poster_crop.jpg">
-							<a class="overlay" href="file:/Users/sumayyah/Code/Web/DiPi-Dataviz/Mockups/V2_Parallax_SVG/materials/timeline.pdf" download><img src="images/resources_poster_hover.png"></a>
+							<!-- <a class="overlay" href="file:/Users/Sumayyah/Documents/GitHub/DiPi-Dataviz/Mockups/V3_Integrated/materials/timeline.pdf" download><img src="images/resources_poster_hover.png"></a> -->
 
+							<a class="overlay" href="file:materials/timeline.pdf" download><img src="images/resources_poster_hover.png"></a>
 
 								<span class="detailText">
 									<h4>Evolution of Participatory Design:<br>5 Disciplines, 50 Years</h4>
@@ -62,7 +63,7 @@
 					<li>
 						<div class="downloadable active">
 							<img src="images/resources_poster_crop.jpg" class="active">
-							<a class="overlay" href="file:/Users/sumayyah/Code/Web/DiPi-Dataviz/Mockups/V2_Parallax_SVG/materials/timeline.jpg" download><img src="images/resources_poster_hover.png"></a>
+							<a class="overlay" href="file:/Users/Sumayyah/Documents/GitHub/DiPi-Dataviz/Mockups/V3_Integrated/materials/timeline.jpg" download><img src="images/resources_poster_hover.png"></a>
 							<span class="detailText">
 									<h4>Evolution of Participatory Design:<br>5 Disciplines, 50 Years</h4>
 									Download the PNG of our timeline graphic here. 
