UI positioning changes to footer and nav in homepage

--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -94,20 +94,21 @@
 
 				<div class="column ">
 					<h4>Introduction</h4>
-					<span id="aboutPerson"></span>
+					<span id="aboutPerson" class="columnText"></span>
 				</div>
 			
 				<div id="col2" class="column ">
 					<h4>Quotes</h4>
-					<span id="quotes"></span>
+					<span id="quotes" class="columnText"></span>
 					<h4>Connections</h4>
-					<span id="connections"></span>
+					<span id="connections" class="columnText"></span>
 				</div>
 
 				<div id="col3" class="column ">
 					<h4>Key Publications</h4>
-					<span id="publications"></span>
-					<h4>Reference</h4>
+					<span id="publications" class="columnText"></span>
+					<h4>References</h4>
+					<span id="references" class="columnText"></span>
 					
 				</div>
 				<div id="col4" class="column" >
@@ -123,18 +124,24 @@
 	</div>
 
 	<footer>
-		<div id="contact">
-			<ul>
-				<li><a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top">Contact <i>dipi@ucdavis.edu</i></a></li>
-				<li><a href="https://twitter.com/ucdipi" target="blank">Tweet <i>@ucdipi</a></i></li>
-			</ul>
-		</div>
-		<div id="dipiLinks">
-			<ul>
-				<li><a href="http://cargocollective.com/dipi/" target="blank"><img src="images/footer_dipi.png" ></a></li>
-				<li><a href="http://creativecommons.org" target="blank"><img src="images/footer_CCA.png"></a></li>
-			</ul>
-		</div>
+
+			<div id="footerContainer">
+
+				<div id="contact">
+					<ul>
+						<li><a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top">Contact <i>dipi@ucdavis.edu</i></a></li>
+						<li><a href="https://twitter.com/ucdipi" target="blank">Tweet <i>@ucdipi</a></i></li>
+					</ul>
+				</div>
+				
+				<div id="dipiLinks">
+					<ul>
+						<li><a href="http://cargocollective.com/dipi/" target="blank"><img src="images/footer_dipi.png" ></a></li>
+						<li><a href="http://creativecommons.org" target="blank"><img src="images/footer_CCA.png"></a></li>
+					</ul>
+				</div>
+
+			</div>
 
 	</footer>
 	
