--- a/Mockups/V3_Integrated/crdIndex.html
+++ b/Mockups/V3_Integrated/crdIndex.html
@@ -168,20 +168,21 @@
 
 			<div class="column ">
 				<h4>Introduction</h4>
-				<span id="aboutPerson"></span>
+				<span id="aboutPerson" class="columnText"></span>
 			</div>
 			
 			<div id="col2" class="column ">
 				<h4>Quotes</h4>
-				<span id="quotes"></span>
+				<span id="quotes" class="columnText"></span>
 				<h4>Connections</h4>
-				<span id="connections"></span>
+				<span id="connections" class="columnText"></span>
 			</div>
 
 			<div id="col3" class="column ">
 				<h4>Key Publications</h4>
-				<span id="publications"></span>
-				<h4>Reference</h4>
+				<span id="publications" class="columnText"></span>
+				<h4>References</h4>
+				<span id="references" class="columnText"></span>
 				
 			</div>
 			<div class="column " id="col4">
