trying to fix resources size

--- a/Mockups/V3_Integrated/resources.html
+++ b/Mockups/V3_Integrated/resources.html
@@ -291,7 +291,7 @@
 					<p>Adapt: remix, transform, and build upon the material</p>
 					
 					<p>The licensor cannot revoke these freedoms as long as you follow the license terms. </p>
-					<img src="images/cc_info_resources.png">
+					<img src="images/cc_info_resources.png"><br>
 
 					<p>For more information about licenses: <a href="http://creativecommons.org" target="blank"><i>http://creativecommons.org</i></a></p>
 
