Fixed resources layout issues

--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -29,7 +29,7 @@
 			<span class="navLinks">
 				<li><a href="about.html" id="about">about</a></li>
 				<li><a href="glossary.html" id="glossary">glossary</a></li>
-				<li><a href="resources.html" id="resources">resources</a></li>
+				<li><a href="resources2.html" id="resources">resources</a></li>
 				<li><a href="crdIndex.html" id="index">index</a></li>
 
 			</span>
@@ -84,8 +84,6 @@
 
 		<div id="popupDiv" class="parallaxSec shadow_top">
 
-			<!-- <div class="popupOverlay" id="topOverlay"></div> -->
-
 				<div id="col1" class="column">
 					<h2 class="details name" id="name">Name</h2>
 					<h6 class="details" id="years">1960-1980</h6>
@@ -95,6 +93,7 @@
 				<div class="column ">
 					<h4>Introduction</h4>
 					<span id="aboutPerson" class="columnText"></span>
+					<span class="blankSpace"></span>
 				</div>
 			
 				<div id="col2" class="column ">
@@ -102,6 +101,7 @@
 					<span id="quotes" class="columnText"></span>
 					<h4>Connections</h4>
 					<span id="connections" class="columnText"></span>
+					<span class="blankSpace"></span>
 				</div>
 
 				<div id="col3" class="column ">
@@ -109,6 +109,7 @@
 					<span id="publications" class="columnText"></span>
 					<h4>References</h4>
 					<span id="references" class="columnText"></span>
+					<span class="blankSpace"></span>
 					
 				</div>
 				<div id="col4" class="column" >
@@ -118,7 +119,6 @@
 					</span>
 				</div>	
 			
-			<!-- <div class="popupOverlay" id="bottomOverlay"></div> -->
 		</div>
 	
 	</div>
