--- a/Mockups/V3_Integrated/crdIndex.html
+++ b/Mockups/V3_Integrated/crdIndex.html
@@ -159,40 +159,44 @@
 		</div>
 
 
-		<div id="popupDiv" class="parallaxSec">
-			<div id="col1" class="column">
-				<h2 class="details name" id="name">Name</h2>
-				<h6 class="details" id="years">1960-1980</h6>
-				<h6 class="details" id="fields">Field 1, Field 2, etc</h6>
-			</div>
+		<div id="popupDiv" class="parallaxSec shadow_top">
 
-			<div class="column ">
-				<h4>Introduction</h4>
-				<span id="aboutPerson" class="columnText"></span>
-			</div>
+				<div id="col1" class="column">
+					<h2 class="details name" id="name">Name</h2>
+					<h6 class="details" id="years">1960-1980</h6>
+					<h6 class="details" id="fields">Field 1, Field 2, etc</h6>
+				</div>
+
+				<div class="column ">
+					<h4>Introduction</h4>
+					<span id="aboutPerson" class="columnText"></span>
+					<span class="blankSpace"></span>
+				</div>
 			
-			<div id="col2" class="column ">
-				<h4>Quotes</h4>
-				<span id="quotes" class="columnText"></span>
-				<h4>Connections</h4>
-				<span id="connections" class="columnText"></span>
-			</div>
+				<div id="col2" class="column ">
+					<h4>Quotes</h4>
+					<span id="quotes" class="columnText"></span>
+					<h4>Connections</h4>
+					<span id="connections" class="columnText"></span>
+					<span class="blankSpace"></span>
+				</div>
 
-			<div id="col3" class="column ">
-				<h4>Key Publications</h4>
-				<span id="publications" class="columnText"></span>
-				<h4>References</h4>
-				<span id="references" class="columnText"></span>
-				
-			</div>
-			<div class="column " id="col4">
-				<span class="name hovered" id="close"><img src="images/arrow.png"></span>
-				<span id="globe">
-					<img src="">
-				</span>
-			</div>		
+				<div id="col3" class="column ">
+					<h4>Key Publications</h4>
+					<span id="publications" class="columnText"></span>
+					<h4>References</h4>
+					<span id="references" class="columnText"></span>
+					<span class="blankSpace"></span>
+					
+				</div>
+				<div id="col4" class="column" >
+					<span class="name hovered" id="close"><img src="images/arrow.png"></span>
+					<span id="globe">
+						<img src="">
+					</span>
+				</div>	
+			
 		</div>
-
 	<footer>
 		<div id="contact">
 			<ul>
