Fixed resources downloads; cleaned up resources

--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -29,7 +29,7 @@
 			<span class="navLinks">
 				<li><a href="about.html" id="about">about</a></li>
 				<li><a href="glossary.html" id="glossary">glossary</a></li>
-				<li><a href="resources2.html" id="resources">resources</a></li>
+				<li><a href="resources.html" id="resources">resources</a></li>
 				<li><a href="crdIndex.html" id="index">index</a></li>
 
 			</span>
