--- a/Mockups/V3_Integrated/about.html
+++ b/Mockups/V3_Integrated/about.html
@@ -30,8 +30,9 @@
 			</span>
 
 			<li></li>
-			<li></li>
-			<li><a href="index.html" id="home">home</a></li>
+      <li><div class="vertical-line"></div></li>
+      <li></li>
+      <li><a href="index.html" id="home">What Does Democratic Design Look Like?</a></li>
 
 		</ul>
 	</nav>
