--- a/Mockups/V3_Integrated/glossary.html
+++ b/Mockups/V3_Integrated/glossary.html
@@ -25,14 +25,15 @@
 		<h1><a href="#" id="title">Glossary</a></h1>
 		<ul>
 			
-			<li><a href="about.html" id="about">about</li>
-			<li><a href="glossary.html" id="glossary">glossary</li>
-			<li><a href="resources.html" id="resources">resources</li>
-			<li><a href="crdIndex.html" id="index">index</li>
+			<li><a href="about.html" id="about" class="navLinks">about</li>
+			<li><a href="glossary.html" id="glossary" class="navLinks">glossary</li>
+			<li><a href="resources.html" id="resources" class="navLinks">resources</li>
+			<li><a href="crdIndex.html" id="index" class="navLinks">index</li>
 
 			<li></li>
-			<li></li>
-			<li><a href="index.html" id="home">home</a></li>
+            <li><div class="vertical-line"></div></li>
+            <li></li>
+			<li><a href="index.html" id="home">What Does Democratic Design Look Like?</a></li>
 
 		</ul>
 	</nav>
@@ -43,7 +44,7 @@
 		<h2 id="heading">KEY WORDS & DEFINITIONS</h2>
 
 		<section class="content">
-				<div class="column sweet-justice">
+				<div class="column">
                 
                 <ul>
                 	<li>
