--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -31,18 +31,20 @@
 				<li><a href="glossary.html" id="glossary">glossary</a></li>
 				<li><a href="resources.html" id="resources">resources</a></li>
 				<li><a href="crdIndex.html" id="index">index</a></li>
-
 			</span>
 
 
 			<li></li>
 			<li></li>
-			<li><div class="vertical-line"></div></li>
-			<li><a href="#" id="tech">technology</a></li>
-			<li><a href="#" id="health">health</a></li>
-			<li><a href="#" id="iDev">international</a></li>
-			<li><a href="#" id="ydev">youth</a></li>
-			<li><a href="#" id="cdev">community</a></li>
+			<span class="parallaxLinks">
+				<li><div class="vertical-line"></div></li>
+				<li><a href="#" id="tech">TECHNOLOGY</a></li>
+				<li><a href="#" id="health">HEALTH</a></li>
+				<li><a href="#" id="iDev">INTERNATIONAL</a></li>
+				<li><a href="#" id="ydev">YOUTH</a></li>
+				<li><a href="#" id="cdev">COMMUNITY</a></li>
+			</span>
+			
 
 		</ul>
 	</div>
