--- a/Mockups/V3_Integrated/crdIndex.html
+++ b/Mockups/V3_Integrated/crdIndex.html
@@ -22,14 +22,17 @@
 		<h1><a href="#" id="title">Index</a></h1>
 		<ul>
 			
-			<li><a href="about.html" id="about">about</a></li>
-			<li><a href="glossary.html" id="glossary">glossary</a></li>
-			<li><a href="resources.html" id="resources">resources</a></li>
-			<li><a href="crdIndex.html" id="index">index</a></li>
+			<span class="navLinks">
+				<li><a href="about.html" id="about">about</a></li>
+				<li><a href="glossary.html" id="glossary">glossary</a></li>
+				<li><a href="resources.html" id="resources">resources</a></li>
+				<li><a href="crdIndex.html" id="index">index</a></li>
+			</span>
 
 			<li></li>
-			<li></li>
-			<li><a href="index.html" id="home">home</a></li>
+            <li><div class="vertical-line"></div></li>
+            <li></li>
+			<li><a href="index.html" id="home">What Does Democratic Design Look Like?</a></li>
 
 		</ul>
 	</nav>
