--- a/Mockups/V3_Integrated/crdIndex_categorized.html
+++ b/Mockups/V3_Integrated/crdIndex_categorized.html
@@ -22,14 +22,18 @@
 		<h1><a href="#" id="title">Index</a></h1>
 		<ul>
 			
-			<li><a href="about.html" id="about">about</li>
-			<li><a href="glossary.html" id="glossary">glossary</li>
-			<li><a href="resources.html" id="resources">resources</li>
-			<li><a href="crdIndex.html" id="index">index</li>
+            <span class="navLinks">
+                <li><a href="about.html" id="about">about</li>
+                <li><a href="glossary.html" id="glossary">glossary</li>
+                <li><a href="resources.html" id="resources">resources</li>
+                <li><a href="crdIndex.html" id="index">index</li>
+            </span>
+			
 
 			<li></li>
-			<li></li>
-			<li><a href="index.html" id="home">home</a></li>
+            <li><div class="vertical-line"></div></li>
+            <li></li>
+            <li><a href="index.html" id="home">What Does Democratic Design Look Like?</a></li>
 
 		</ul>
 	</nav>
