--- a/Mockups/V3_Integrated/resources.html
+++ b/Mockups/V3_Integrated/resources.html
@@ -8,7 +8,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Josefin+Slab:400,600,700|Rosario:400italic,400,700italic,700|Open+Sans:100,300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<title>Resources</title>
-	<link rel="stylesheet" type="text/css" href="resources2.css">
+	<link rel="stylesheet" type="text/css" href="resources.css">
 
 	<!-- This is to implement the navigation animations -->
 	<script type="text/javascript" src="crdIndex.js"></script>
@@ -24,14 +24,17 @@
 		<h1><a href="#" id="title">Resources</a></h1>
 		<ul>
 			
-			<li><a href="about.html" id="about">about</li>
-			<li><a href="glossary.html" id="glossary">glossary</li>
-			<li><a href="resources.html" id="resources">resources</li>
-			<li><a href="crdIndex.html" id="index">index</li>
+			<span class="navLinks">
+				<li><a href="about.html" id="about">about</li>
+				<li><a href="glossary.html" id="glossary">glossary</li>
+				<li><a href="resources.html" id="resources">resources</li>
+				<li><a href="crdIndex.html" id="index">index</li>
+			</span>
 
 			<li></li>
-			<li></li>
-			<li><a href="index.html" id="home">home</a></li>
+            <li><div class="vertical-line"></div></li>
+            <li></li>
+			<li><a href="index.html" id="home">What Does Democratic Design Look Like?</a></li>
 
 		</ul>
 	</nav>
