--- a/Mockups/V3_Integrated/crdIndex.html
+++ b/Mockups/V3_Integrated/crdIndex.html
@@ -107,7 +107,7 @@
                     <li class="people" id="lynch">Lynch, Kevin</li>
                     <br>
 					<li class="organization" id="miginc">MIG Inc</li>
-					<li class="people" id="minkler">Minkler, Meredith</li>
+					<li class="people" id="wallerstein">Minkler, Meredith</li>
 					<li class="people" id="moore">Moore, Robin</li>
 					<br>
 					<li class="project" id="njmfn">NJMF Project</li>
@@ -137,7 +137,7 @@
                 <h2 class="alphaheader">U - Z</h2>
 				<ul>
                     <li class="organization" id="unicef_irc">UNICEF Innocenti Research Center</li>
-                    <li class="organization" id="undp">United Nations Develpment Programme (UNDP)</li>
+                    <li class="organization" id="uni">United Nations Develpment Programme (UNDP)</li>
                     <li class="organization" id="uni">UN Research Institute for Social Development (UNRISD)</li>	
                     <li class="project" id="utopiasd">UTOPIA Project</li>
                     <br>
