--- a/Mockups/V3_Integrated/crdIndex_categorized.html
+++ b/Mockups/V3_Integrated/crdIndex_categorized.html
@@ -72,7 +72,7 @@
                     <li class="organization" id="cbpr">Community-Based Participatory Research (CPSR) Program</li>
                     <li class="people" id="fals-borda">Fals-Borda, Orlando</li>
                     <li class="people" id="freire">Freie, Paulo</li>
-                    <li class="people" id="minkler">Minkler, Meredith</li> 
+                    <li class="people" id="wallerstein">Minkler, Meredith</li> 
                     <li class="people" id="wallerstein">Wallerstein, Nina</li>
                     <li class="people" id="whyte">Whyte, William Foote</li>
                  </ul>
@@ -93,7 +93,7 @@
                     <li class="project" id="opp-rti">Orangi Pilot Project (OPP-RTI)</li>
                     <li class="organization" id="sewa">Self-Employed Women's Associations in India (SEWA)</li>
                     <li class="organization" id="spra">Society for Participatory Research in Asia (PRIA)</li>
-                    <li class="organization" id="undp">United Nations Develpment Programme (UNDP)</li>
+                    <li class="organization" id="uni">United Nations Develpment Programme (UNDP)</li>
                     <li class="organization" id="uni">UN Research Institute for Social Development (UNRISD)</li>	
                     <li class="organization" id="wb">World Bank</li>
                 </ul>
