UI and alignment fixes

--- a/Mockups/V3_Integrated/resources.html
+++ b/Mockups/V3_Integrated/resources.html
@@ -315,7 +315,7 @@
 		<div id="dipiLinks">
 			<ul>
 				<li><a href="http://cargocollective.com/dipi/" target="blank"><img src="images/footer_dipi.png" ></a></li>
-				<li><a href="http://creativecommons.org" target="blank"><img src="images/footer_CCA.png"></a></li>
+				<li><a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="blank"><img src="images/footer_CCA.png"></a></li>
 			</ul>
 		</div>
 
