Fixed Safari issue with column_sm in resources

--- a/Mockups/V3_Integrated/resources.html
+++ b/Mockups/V3_Integrated/resources.html
@@ -285,6 +285,7 @@
 			</div> <!-- End main column -->
 
 			<div class="column_sm">
+			RHETVFFREHRFBSSFBSDBEHTRHWFBDSBFDBFETTEHHRFDCREHBSCDBFREHERHRENF
 					<h5>All resource materials are licensed under Creative Commons Attribution NonCommercial-ShareAlike 4.0 International License</h5>
 
 					<h5>What does it mean?</h5>
