minor UI changes

--- a/Mockups/V3_Integrated/about.html
+++ b/Mockups/V3_Integrated/about.html
@@ -57,13 +57,13 @@
 
                     <h2 class="alphaheader">CAPTURING PROCESS</h2>
 
-                    Capturing process was a very important componenet to this project. We deiced to use a blog to keep track of the way this project evolved. The bigger question in documenting the process of this project was the question: “How do we document collaborative work?
+                    Capturing process was a very important component of this project. We decided to use a blog to keep track of the way this project evolved. The bigger question in documenting the process of this project was the question: “How do we document collaborative work?"
 
                     <br><br>
 
                     <h6>What does participatory design look like?</h6>
 
-                    <p><a href="http://documenting-collaborative.tumblr.com/" target="blank" class="hovered">http://documenting-collaborative.tumblr.com/</a></p>
+                    <p><a href="http://documenting-collaborative.tumblr.com/" target="blank" class="link">http://documenting-collaborative.tumblr.com/</a></p>
 
                     <br><br><br>
 
@@ -88,7 +88,20 @@
 
                     <h6>Visualization and Interface Design Innovation (ViDi)</h6>
 
-                    <a href="http://vidi.cs.ucdavis.edu/new" target="blank" class="hovered">http://vidi.cs.ucdavis.edu/new</a>
+                    <a href="http://vidi.cs.ucdavis.edu/new" target="blank" class="link">http://vidi.cs.ucdavis.edu/new</a>
+
+                    <ul>
+                      <li>Robert Chambers</li>
+                      <li>Louise Chawla </li>
+                      <li>Kathy Dorgan </li>
+                      <li>Holly Felix </li>
+                      <li>Mark Francis</li>
+                      <li>Gilad Meron </li>
+                      <li>Patsy Eubanks Owens</li>
+                      <li>Henry Sanoff </li>
+                      <li>Jesper Simonsen </li>
+                      <li>Jane Stevens </li>
+                    </ul>
 
 
           
@@ -115,11 +128,9 @@
        					<div class="description">
 
        						<h6>Yohei Kato</h6>
-							<span class="italicize">Graduate Student Researcher & MS Candidate, Community and Regional Development</span> <br>
+							<span class="italicize"> Master's student at UC Davis Community Development Graduate Group</span> <br>
 							Yohei Kato, a master's student at the UC Davis Community Development Graduate Group.
-							His research interests include youth development and design that empowers community.
-							He founded the competition in Dhaka, Bangladesh and facilitated local people to establish the Hajimari Art
-							Center in Fukushima, Japan.
+							 His research interests include youth development and design that empowers community. He founded the competition in Dhaka, Bangladesh and worked with UC Davis Center for Regional Change.
 
        					</div>
        				</div>
@@ -170,9 +181,9 @@
 
   <footer>
     <div id="contact">
-      <ul>
-        <li><a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top">Contact <i>dipi@ucdavis.edu</i></a></li>
-        <li><a href="https://twitter.com/ucdipi" target="blank">Tweet <i>@ucdipi</a></i></li>
+     <ul>
+        <li>Contact <a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top" id="mailLink"><i>dipi@ucdavis.edu</i></a></li>
+        <li>Tweet <a href="https://twitter.com/ucdipi" target="blank"  id="twitterLink"><i>@ucdipi</a></i></li>
       </ul>
     </div>
     <div id="dipiLinks">
