--- a/Mockups/V3_Integrated/index.html
+++ b/Mockups/V3_Integrated/index.html
@@ -131,8 +131,8 @@
 
 				<div id="contact">
 					<ul>
-						<li><a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top">Contact <i>dipi@ucdavis.edu</i></a></li>
-						<li><a href="https://twitter.com/ucdipi" target="blank">Tweet <i>@ucdipi</a></i></li>
+						<li>Contact <a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top" id="mailLink"><i>dipi@ucdavis.edu</i></a></li>
+						<li>Tweet <a href="https://twitter.com/ucdipi" target="blank"  id="twitterLink"><i>@ucdipi</a></i></li>
 					</ul>
 				</div>
 				
