--- a/Mockups/V3_Integrated/glossary.html
+++ b/Mockups/V3_Integrated/glossary.html
@@ -157,9 +157,9 @@ and analyze their knowledge of life and conditions, to plan and to act."
 		</div>
     <footer>
         <div id="contact">
-            <ul>
-                <li><a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top">Contact <i>dipi@ucdavis.edu</i></a></li>
-                <li><a href="https://twitter.com/ucdipi" target="blank">Tweet <i>@ucdipi</a></i></li>
+           <ul>
+                <li>Contact <a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top" id="mailLink"><i>dipi@ucdavis.edu</i></a></li>
+                <li>Tweet <a href="https://twitter.com/ucdipi" target="blank"  id="twitterLink"><i>@ucdipi</a></i></li>
             </ul>
         </div>
         <div id="dipiLinks">
