--- a/Mockups/V3_Integrated/resources.html
+++ b/Mockups/V3_Integrated/resources.html
@@ -68,12 +68,12 @@
 								<a class="overlay" href="materials/timeline.jpg" download="timeline.jpg"><img src="images/resources_poster_hover.png"></a>
 								<span class="detailText">
 										<h4>Evolution of Participatory Design:<br>5 Disciplines, 50 Years</h4>
-										Download the PNG of our timeline graphic here. 
+										Download the image version of our timeline graphic here in PNG format. 
 									</span>
 							</div>
 						</li>
 
-						<li>
+						<!-- <li>
 							<div class="downloadable">
 								<img src="images/blank_rect.png">
 								<img src="images/resources_poster_hover.png" class="overlay">
@@ -82,7 +82,7 @@
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 									</span>
 							</div>
-						</li>
+						</li> -->
 
 					</ul>
 
@@ -97,6 +97,16 @@
 									<span class="detailText">
 											<h4>SVG of Timeline</h4>
 											Download the SVG version of the timeline given above. 
+										</span>
+								</div>
+							</li>
+							<li>
+								<div class="downloadable active">
+									<img src="images/resources_data1_crop.jpg">
+									<a class="overlay" href="materials/Data_Table.xlsx" download="data_table.xlsx"><img src="images/resources_poster_hover.png"></a>
+									<span class="detailText">
+											<h4>Excel</h4>
+											Download the Excel file of our data. 
 										</span>
 								</div>
 							</li>
@@ -120,6 +130,7 @@
 										</span>
 								</div>
 							</li>
+
 			
 						</ul>
 				</div> <!-- End Downloadables -->
@@ -309,8 +320,8 @@
 	<footer>
 		<div id="contact">
 			<ul>
-				<li><a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top">Contact <i>dipi@ucdavis.edu</i></a></li>
-				<li><a href="https://twitter.com/ucdipi" target="blank">Tweet <i>@ucdipi</a></i></li>
+				<li>Contact <a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top" id="mailLink"><i>dipi@ucdavis.edu</i></a></li>
+				<li>Tweet <a href="https://twitter.com/ucdipi" target="blank"  id="twitterLink"><i>@ucdipi</a></i></li>
 			</ul>
 		</div>
 		<div id="dipiLinks">
