Removed manual dependency in SVG
Process of Ai->SVG->code is fully automatic in script.js

--- a/Mockups/V3_Integrated/about.html
+++ b/Mockups/V3_Integrated/about.html
@@ -46,12 +46,10 @@
                 
                     <img src="images/about_page_intro_pic.jpg"><br>
 
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Duis aute irure 
-                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt 
-                    mollit anim id est laborum.
+                    
+<p>We began this project with a question, some butcher paper, and sticky notes; using rapid prototyping and user feedback we created this design and transformed it into a digital format. Our overarching objective is to synthesize, document, and make visible key influences, projects, and events in one easily accessible place in order to explore how participatory practices evolved and how they might be further developed across and within disciplines. </p>
+
+<p>We want YOU to contribute to the project! To provide opportunities for broad participation, digital project resources (data and artifacts) including timeline, posters, and data sets are available for download in the <i>Resources</i> section. You can also review and remediate content and suggesting additional articles and resource by emailing us, <a href="mailto:dipi@ucdavis.edu?Subject=Hello%20again" target="_top" class="onPage" id="inPageMailLink"><i>dipi@ucdavis.edu</i></a>.</p>
 
                     <br><br><br>
 
